# formal2021-practice

./: README.md
CommonFiles/: Grammar.cpp  Grammar.h
Earley/: CMakeLists.txt  Earley.cpp  Earley.h  Grammar.cpp  Grammar.h  main.cpp  run_tests.cpp
Earley/tests/: Tests.cpp
LR/: CMakeLists.txt  LR.cpp  LR.h  main.cpp
LR/tests/: Tests.cpp
